# marl_bot

./: CMakeLists.txt  README.md  debug.sh  package.xml  setup.cfg  setup.py
config/: drive_bot.rviz  joystick.yaml  mapper_params_online_async copy.yaml  remap_mapper_params_online_async.yaml  view_bot.rviz
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_sim.launch.py  rsp.launch.py
marl_bot/: rpm_node.py
multi_robot_description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
multi_robot_launch/: iteration.launch.py  multi_joystick.launch.py  multi_launch_sim.launch.py  rsp.launch.py  slam.launch.py
params/: joystick_template.yaml  rpm_template.yaml
real_launch/: joystick.launch.py  pi_iteration.launch.py  rpm.launch.py  slam.launch.py
sim_launch/: joystick.launch.py  launch_sim.launch.py
sim_multi_robot_launch/: iteration.launch.py  multi_joystick.launch.py  multi_launch_sim.launch.py  slam.launch.py
worlds/: env1.world  env1_1.world  env1_10.world  env1_2.world  env1_3.world  env1_4.world  env1_5.world  env1_6.world  env1_7.world  env1_8.world  env1_9.world  env2.world  env2_1.world  env2_10.world  env2_2.world  env2_3.world  env2_4.world  env2_5.world  env2_6.world  env2_7.world  env2_8.world  env2_9.world  env3.world  env3_1.world  env3_10.world  env3_2.world  env3_3.world  env3_4.world  env3_5.world  env3_6.world  env3_7.world  env3_8.world  env3_9.world  env4.world  env4_1.world  env4_10.world  env4_2.world  env4_3.world  env4_4.world  env4_5.world  (+17 more)
(+13 files in other folders)
